Fixes tooltip wrapping issue

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -383,6 +383,11 @@ p.attention {
   font-style: italic;
 }
 
+.autolab .tooltip-inner {
+    white-space:pre;
+    max-width:none;
+}
+
 /**
  * ULs on the moss page
  **/
